--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,7 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+.text {
+  @apply font-extrabold text-transparent bg-clip-text bg-gradient-to-br from-blue-100 to-blue-300;
+}
